--- a/demo/demoresponsive-1/demo.css
+++ b/demo/demoresponsive-1/demo.css
@@ -35,3 +35,15 @@ li > div{
     font-size:.75em;
   }
 }
+
+@media screen and (max-width: 480px){
+  li{
+    width: 4em;
+    height: 4em;
+    margin-top: .75em;
+    margin-right: .75em;
+  }
+  li > div{
+    font-size:.5em;
+  }
+}
